feat: add picture to book
